examples/test/testpolicy2544.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2544
  namespace: namespace315
spec:
  podSelector:
    matchLabels:
      key46: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value7
          key34: value22
          key0: value14
      podSelector:
        matchLabels:
          key40: value44
